--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".GOSESSION"
+        <activity
+            android:name=".GoSession"
+            android:screenOrientation="landscape" />
+        <activity android:name=".ShareUrl"
             android:screenOrientation="landscape"></activity>
     </application>
 
