--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,9 +20,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Record" />
-        <activity android:name=".InfoVideo" />
-        <activity android:name=".SelectedVideo"></activity>
+        <activity
+            android:name=".Record"
+            android:screenOrientation="landscape"/>
+        <activity
+            android:name=".InfoVideo"
+            android:screenOrientation="landscape"/>
+        <activity
+            android:name=".SelectedVideo"
+            android:screenOrientation="landscape"></activity>
     </application>
 
 </manifest>
