correction pull request

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
         <activity android:name=".ProfilActivity"
             android:screenOrientation="landscape"/>
         <activity
-            android:name=".GoSession"
+            android:name=".StartActivity"
             android:screenOrientation="landscape" />
         <activity android:name=".ShareUrl"
             android:screenOrientation="landscape"/>
