--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,11 +14,7 @@
         <activity
             android:name=".MainActivity"
             android:screenOrientation="landscape">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".RecordActivity"
@@ -28,7 +24,10 @@
             android:screenOrientation="landscape"/>
         <activity
             android:name=".SelectedVideoActivity"
-            android:screenOrientation="landscape"></activity>
+            android:screenOrientation="landscape">
+
+        </activity>
+        <activity
             android:name=".ConnexionActivity"
             android:screenOrientation="landscape"/>
 
@@ -39,8 +38,14 @@
             android:screenOrientation="landscape"/>
         <activity
             android:name=".StartActivity"
-            android:screenOrientation="landscape" />
-        <activity android:name=".ShareUrl"
+            android:screenOrientation="landscape" >
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+        </activity>
+        <activity android:name=".ShareUrlActivity"
             android:screenOrientation="landscape"/>
     </application>
 
