--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,8 @@
             android:screenOrientation="landscape"/>
         <activity
             android:name=".SelectedVideoActivity"
-            android:screenOrientation="landscape"></activity>
+            android:screenOrientation="landscape"/>
+        <activity
             android:name=".ConnexionActivity"
             android:screenOrientation="landscape"/>
 
