--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,32 +22,29 @@
         </activity>
         <activity
             android:name=".RecordActivity"
-            android:screenOrientation="landscape"/>
+            android:screenOrientation="landscape" />
         <activity
             android:name=".InfoVideoActivity"
-            android:screenOrientation="landscape"/>
+            android:screenOrientation="landscape" />
         <activity
             android:name=".SelectedVideoActivity"
-            android:screenOrientation="landscape"/>
-
+            android:screenOrientation="landscape" />
         <activity
             android:name=".ConnexionActivity"
-            android:screenOrientation="landscape"/>
-
+            android:screenOrientation="landscape" />
         <activity
             android:name=".MyVideoActivity"
             android:screenOrientation="landscape" />
-      
-        <activity android:name=".ProfilActivity"
-            android:screenOrientation="landscape"/>
-      
+        <activity
+            android:name=".ProfilActivity"
+            android:screenOrientation="landscape" />
         <activity
             android:name=".StartActivity"
-            android:screenOrientation="landscape" >
-        </activity>
-        
-      <activity android:name=".ShareUrlActivity"
-            android:screenOrientation="landscape"/>
+            android:screenOrientation="landscape"></activity>
+        <activity
+            android:name=".ShareUrlActivity"
+            android:screenOrientation="landscape" />
+        <activity android:name=".AddGridActivity"></activity>
     </application>
 
 </manifest>
