changement list to recycler dans SelectedVideo

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,8 +24,15 @@
             android:screenOrientation="landscape" />
         <activity
             android:name=".SelectedVideoActivity"
-            android:screenOrientation="landscape" />
-        <activity
+            android:screenOrientation="landscape" >
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+    </activity>
+
+    <activity
             android:name=".ConnexionActivity"
             android:screenOrientation="landscape" />
         <activity
@@ -45,11 +52,7 @@
         <activity android:name=".AddGridActivity"
             android:screenOrientation="landscape"
             android:theme="@style/AppEvent">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
 
         </activity>
     </application>
