--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,5 @@ dependencies {
     implementation 'com.android.support:design:26.1.0'
     implementation 'com.android.support:recyclerview-v7:26.1.0'
     implementation 'petrov.kristiyan:colorpicker-library:1.1.8'
+    implementation 'com.android.volley:volley:1.1.0'
 }
