--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     implementation 'com.android.volley:volley:1.1.0'
     implementation 'com.github.bumptech.glide:glide:4.3.1'
+    implementation 'com.google.firebase:firebase-database:11.8.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.3.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
@@ -40,3 +41,5 @@ dependencies {
     implementation 'petrov.kristiyan:colorpicker-library:1.1.8'
     implementation 'com.android.volley:volley:1.1.0'
 }
+
+apply plugin: 'com.google.gms.google-services'
