--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,8 @@
 
         <activity
             android:name=".InfoVideoActivity"
-            android:screenOrientation="landscape"/>
+            android:screenOrientation="landscape"
+            android:windowSoftInputMode="stateHidden"/>
         <activity
             android:name=".SelectedVideoActivity"
             android:screenOrientation="landscape"/>
