--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:26.1.0'
     implementation 'petrov.kristiyan:colorpicker-library:1.1.7'
     implementation 'com.android.volley:volley:1.1.0'
+    implementation 'com.google.firebase:firebase-auth:11.8.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
