--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,16 +25,20 @@
         <activity
             android:name=".MainActivity"
             android:screenOrientation="landscape"/>
+
         <activity
             android:name=".RecordActivity"
             android:screenOrientation="landscape" />
+
         <activity
             android:name=".InfoVideoActivity"
             android:screenOrientation="landscape"
             android:windowSoftInputMode="stateHidden" />
+
         <activity
             android:name=".SelectedVideoActivity"
             android:screenOrientation="landscape" />
+
         <activity
             android:name=".ConnexionActivity"
             android:screenOrientation="landscape"
@@ -45,6 +49,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".MyVideoActivity"
             android:screenOrientation="landscape" />
@@ -52,20 +57,17 @@
         <activity
             android:name=".StartActivity"
             android:screenOrientation="landscape"
-            android:windowSoftInputMode="stateHidden" >
-
-        </activity>
-        <activity
-            android:name=".StartActivity"
-            android:screenOrientation="landscape"
             android:windowSoftInputMode="stateHidden" />
+
         <activity
             android:name=".AddGridActivity"
             android:screenOrientation="landscape"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="stateHidden" />
-        <activity android:name=".PlaySelectedVideo"
+
+        <activity android:name=".PlayVideoActivity"
             android:screenOrientation="landscape"/>
+
         <activity android:name=".ForgotPassword"
             android:screenOrientation="landscape"
             android:theme="@style/AppTheme.NoActionBar"
@@ -74,14 +76,6 @@
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
-
-        <activity android:name=".PlayVideoActivity">
-        </activity>
-         
-        <activity android:name=".ForgotPassword"
-            android:screenOrientation="landscape"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="stateHidden"/>
 
     </application>
 
