--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,21 +24,17 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:screenOrientation="landscape"/>
-
+            android:screenOrientation="landscape"></activity>
         <activity
             android:name=".RecordActivity"
             android:screenOrientation="landscape" />
-
         <activity
             android:name=".InfoVideoActivity"
             android:screenOrientation="landscape"
             android:windowSoftInputMode="stateHidden" />
-
         <activity
             android:name=".SelectedVideoActivity"
-            android:screenOrientation="landscape" />
-
+            android:screenOrientation="landscape"></activity>
         <activity
             android:name=".ConnexionActivity"
             android:screenOrientation="landscape"
@@ -49,21 +45,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".MyVideoActivity"
             android:screenOrientation="landscape" />
-
-
         <activity
             android:name=".StartActivity"
             android:screenOrientation="landscape"
-            android:windowSoftInputMode="stateHidden" />
-
-        <activity android:name=".PlayVideoActivity"
-            android:screenOrientation="landscape"/>
-
-        <activity android:name=".ForgotPassword"
+            android:windowSoftInputMode="stateHidden"></activity>
+        <activity
+            android:name=".PlayVideoActivity"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".ForgotPassword"
             android:screenOrientation="landscape"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="stateHidden" />
@@ -71,6 +64,10 @@
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
+
+        <activity android:name=".ApiActivity">
+
+        </activity>
     </application>
 
 </manifest>
