--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,9 @@ android {
         // but continue the build even when errors are found:
         abortOnError false
     }
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
 }
 
 repositories {
@@ -41,7 +44,7 @@ repositories {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-    implementation 'com.android.support:design:27.0.2'
+    implementation 'com.android.support:design:27.1.1'
     implementation 'com.github.bumptech.glide:glide:4.3.1'
     implementation 'petrov.kristiyan:colorpicker-library:1.1.8'
     implementation 'com.android.volley:volley:1.1.0'
@@ -49,6 +52,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:16.0.1'
     implementation 'com.google.firebase:firebase-auth:16.0.3'
     testImplementation 'junit:junit:4.12'
+    testImplementation 'org.mockito:mockito-core:2.0.5-beta'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
 
