--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ android {
     testOptions {
         unitTests.returnDefaultValues = true
     }
+    buildToolsVersion '27.0.3'
 }
 
 repositories {
@@ -55,7 +56,6 @@ dependencies {
     testImplementation 'org.mockito:mockito-core:2.0.5-beta'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.google.guava:guava:24.1-android'
-
 }
 
 
