--- a/.gitignore
+++ b/.gitignore
@@ -134,3 +134,5 @@ fabric.properties
 # End of https://www.gitignore.io/api/androidstudio
 
 app/src/main/res/values/conf.xml
+
+app/src/main/res/values/password.xml
