--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,11 @@ dependencies {
     testImplementation 'org.mockito:mockito-core:2.0.5-beta'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.google.guava:guava:24.1-android'
+
+    //Glide
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.3.1'
+    implementation 'com.github.bumptech.glide:glide:4.3.1'
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.10'
 }
 
 
