--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,24 +23,24 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name=".activity.MainActivity"
             android:screenOrientation="userLandscape"
             android:windowSoftInputMode="stateHidden|adjustPan"/>
         <activity
-            android:name=".RecordActivity"
+            android:name=".activity.RecordActivity"
             android:screenOrientation="userLandscape" />
         <activity
-            android:name=".InfoVideoActivity"
+            android:name=".activity.InfoVideoActivity"
             android:screenOrientation="userLandscape"
             android:windowSoftInputMode="stateHidden|adjustPan" />
         <activity
-            android:name=".SelectedVideoActivity"
+            android:name=".activity.SelectVideoActivity"
             android:screenOrientation="userLandscape">
 
         </activity>
 
         <activity
-            android:name=".ConnexionActivity"
+            android:name=".activity.ConnexionActivity"
             android:screenOrientation="userLandscape"
             android:windowSoftInputMode="stateHidden|adjustPan">
             <intent-filter>
@@ -51,29 +51,30 @@
 
         </activity>
         <activity
-            android:name=".MyVideoActivity"
+            android:name=".activity.MyVideosActivity"
             android:screenOrientation="userLandscape" />
         <activity
-            android:name=".StartActivity"
+            android:name=".activity.CreateSessionActivity"
             android:screenOrientation="userLandscape"
             android:windowSoftInputMode="stateHidden|adjustPan"
             >
         </activity>
 
         <activity
-            android:name=".PlayVideoActivity"
+            android:name=".activity.PlayVideoActivity"
             android:screenOrientation="userLandscape" />
         <activity
-            android:name=".ForgotPassword"
+            android:name=".activity.ForgotPasswordActivity"
             android:screenOrientation="userLandscape"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="stateHidden|adjustPan" />
 
         <activity
-            android:name=".AddGridActivity"
+            android:name=".activity.AddGridActivity"
             android:screenOrientation="userLandscape"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="stateHidden|adjustPan" />
+
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
