VyfeViewModel, passing all seesions threw intent by their id and use repositories a better way

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ android {
     defaultConfig {
         resConfigs "en", "fr"
         applicationId "fr.vyfe"
-        minSdkVersion 16
+        minSdkVersion 21
         targetSdkVersion 28
         versionCode 4
         versionName "1.4"
@@ -64,7 +64,7 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.3.1'
     implementation 'com.github.bumptech.glide:glide:4.3.1'
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.10'
-
+    implementation "com.android.support:support-v13:28.0.0"
 }
 
 
