prepare to merge

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,7 +49,7 @@
             android:screenOrientation="userLandscape"
             android:windowSoftInputMode="stateHidden|adjustPan"/>
         <activity
-            android:name=".activity.MyVideosActivity"
+            android:name=".activity.MySessionsActivity"
             android:screenOrientation="userLandscape" />
         <activity
             android:name=".activity.CreateSessionActivity"
