--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,7 @@ android {
         versionName "1.4"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -44,9 +45,13 @@ android {
 
 repositories {
     mavenCentral()
+
 }
 
-
+configurations {
+    cleanedAnnotations
+    compile.exclude group: 'org.jetbrains' , module:'annotations'
+}
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
@@ -76,6 +81,11 @@ dependencies {
     implementation 'androidx.annotation:annotation:1.0.0'
     implementation 'androidx.test.espresso:espresso-idling-resource:3.1.0'
     implementation 'org.jetbrains:annotations-java5:15.0'
+
+
+
+    implementation "com.vimeo.networking:vimeo-networking:1.1.3"
+
 }
 
 
