add icone delete (delte tag) and add environnement in burger menu and ajust design in EditSession

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ android {
             buildConfigField "String", "FIREBASE_DATABASE_URL", FIREBASE_DATABASE_URL_PROD
             buildConfigField "String", "DB_PREFIX", '"prod"'
             signingConfig signingConfigs.prod
+            debuggable true
         }
         staging {
             buildConfigField "String", "FIREBASE_DATABASE_URL", FIREBASE_DATABASE_URL_STAGING
